force-app/main/default/objects/WorkStepTemplate/WorkStepTemplate.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>