force-app/main/default/objects/WorkStepTemplate/fields/MSN_ScheduleItem_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_ScheduleItem_Code__c</fullName>
    <description>Schedule Item Codes (aka &quot;RFP Codes&quot;) are used by MSN/Watercare in subsequent systems (e.g.EAM) in diverse finance processes and are used e.g. to define allowed costs for certain activities on a contractor &quot;Contract Schedule&quot; agreed with Watercare.</description>
    <inlineHelpText>Stores the &quot;Schedule Item Code&quot; (aka RFP Code) for the activity carried out by the field crew.</inlineHelpText>
    <label>Schedule Item Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>