force-app/main/default/objects/WorkStepTemplate/fields/MSN_Service_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>MSN_Service_Product_Code__c</fullName>
    <description>Service Product codes were used by MSN/Watercare in their legacy finance system SAP  in diverse finance processes and have been replaced with &quot;Schedule Item Codes&quot; instead. They are kept in Salesforce on the Work Step record for contingency purposes in reporting.</description>
    <label>Service Product Code</label>
    <length>30</length>
    <type>Text</type>
</CustomField>