force-app/main/default/objects/WorkStepTemplate/fields/MSN_URL__c.field-meta.xml
<CustomField>
    <fullName>MSN_URL__c</fullName>
    <description>Used to store a URL to an external Website (e.g. Powerapps) or similar that a user is supposed to open directly from the FSL mobile app &quot;work plan&quot; in order to complete an external process step.</description>
    <inlineHelpText>Optional. Enter a URL to e.g. an external Website (e.g. Powerapps) that the user is supposed to visit in order to complete an external process step.</inlineHelpText>
    <label>External URL</label>
    <type>Url</type>
</CustomField>