force-app/main/default/objects/WorkStepTemplate/fields/MSN_WorkStep_Answer__c.field-meta.xml
<CustomField>
    <fullName>MSN_WorkStep_Answer__c</fullName>
    <description>Used to record the Answer that has been given to a Work Step question via the Flow &quot;MSN - Field Service Mobile App - Work Step Answers&quot; as part of a Work Plan for a given Work Order.</description>
    <inlineHelpText>If you type in an answer on this Work Step Template, this will then show up as a prepopulated answer on the Work Step for the mobile user.</inlineHelpText>
    <label>Work Step Answer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>